k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcrafter-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cloudcrafter.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 3000

          - path: /events
            pathType: Prefix
            backend:
              service:
                name: events
                port:
                  number: 3000

          - path: /tickets
            pathType: Prefix
            backend:
              service:
                name: tickets
                port:
                  number: 3000

          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notifications
                port:
                  number: 3000
